--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+.card{
+	width:300px;
+	height:450px;
+	background-color:rgb(250, 217, 288);
+	padding:20px;
+	box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.5);
+}
+.img{
+	height:200px;
+	width:300px;
+}
+.btn{
+	border:none;
+	padding:15px;
+	background-color:orangered;
+	color:white;
+	border-radius:10px;
+	
+}
+
